# AdventOfCode

./: .gitignore  00-README.ipynb  LICENSE  README.md  environment.yml  pyproject.toml
2020/: day4.py
2020/day01/: day1.ipynb
2020/day06/: day6.py
2020/day07/: day7.py
2020/day08/: day8.py
2020/day09/: day9.py
2020/day10/: day10-part1.py
2020/day12/: day12-part1.py
2020/day14/: day14.py
2020/day15/: day15.py
2020/day2/: day2.ipynb
2020/day8/: day8.py
solutions/: 01-1-kws.ipynb  01-2-kws.ipynb  03-1-kws.ipynb  04-1-kws.ipynb  06-1-kws.ipynb  07-1-kws.ipynb  08-1-kws.ipynb  09-kws.ipynb  10-kws.ipynb  11-kws.ipynb  16-kws.ipynb
solutions/2018/celine/: day3.ipynb  (+4 more)
solutions/2021/pughmds/day06/: main.py  pyproject.toml  test.py
solutions/2022/francisco/: README.md  pyproject.toml  run.py  util.py
solutions/2022/francisco/01/: main.py
solutions/2022/francisco/02/: main.py
solutions/2022/francisco/03/: main.py
solutions/2022/francisco/04/: main.py
solutions/2022/francisco/05/: STATEMENT.md  main.py
solutions/2022/francisco/06/: STATEMENT.md  main.py
solutions/2022/francisco/07/: STATEMENT.md  main.py
solutions/2022/francisco/08/: STATEMENT.md  main.py
solutions/2022/kws/: .pre-commit-config.yaml  LICENSE  day18.stl  pyproject.toml
solutions/2022/kws/aoc_2022_kws/: cli.py  config.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  setup.py
solutions/2022/kws/inputs/kws/: day22.txt
solutions/2022/kws/tests/: test_day02.py  test_day06.py  test_day13.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day22.py  test_day24.py  test_day25.py
solutions/2023/francisco/: README.md  pyproject.toml  util.py
solutions/2023/francisco/01/: go.mod  main.go
solutions/2023/francisco/02/: STATEMENT.md  main.py
solutions/2023/francisco/03/: STATEMENT.md  main.py
solutions/2023/francisco/04/: STATEMENT.md  main.py
solutions/2023/francisco/05/: STATEMENT.md  main.py
solutions/2023/francisco/06/: STATEMENT.md  main.py
solutions/2023/francisco/07/: STATEMENT.md  main.py
solutions/2023/francisco/08/: STATEMENT.md  main.py  test.txt
solutions/2023/francisco/09/: STATEMENT.md  main.py
solutions/2023/francisco/10/: STATEMENT.md  main.py
solutions/2023/francisco/day_template/: main.py
solutions/2023/kws/: README.md  pyproject.toml
solutions/2023/kws/aoc_2023_kws/: cli.py  config.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  setup.py
solutions/2023/kws/tests/: test_02.py  test_05.py  test_07.py
solutions/2023/pughmds/python/: main.py  pyproject.toml
solutions/2023/pughmds/python/day01/: __main__.py
solutions/2023/pughmds/python/day02/: __main__.py
solutions/2023/pughmds/python/day03/: __main__.py
solutions/2023/pughmds/python/day04/: __main__.py
solutions/2023/pughmds/python/day05/: __main__.py
solutions/2023/pughmds/python/day06/: __main__.py
solutions/2023/pughmds/python/day07/: __main__.py
solutions/2023/pughmds/python/day08/: __main__.py
solutions/2023/pughmds/python/day10/: __main__.py  __main__old.py
solutions/2023/pughmds/python/day11/: __main__.py
solutions/2023/pughmds/python/day12/: __main__.py
solutions/2023/pughmds/python/day13/: __main__.py
solutions/2023/pughmds/python/day14/: __main__.py
solutions/2023/pughmds/python/day15/: __main__.py
solutions/2023/pughmds/python/shared/: file.py  output.py  test.py
solutions/2023/tab1tha/: .pre-commit-config.yaml  README.md  pyproject.toml  test_day1.txt  test_day2.txt
solutions/2023/tab1tha/day1/: part1.py  part2.py  test_day1.py
solutions/2023/tab1tha/day2/: part1.py  part2.py  test_day2.py
solutions/2023/tab1tha/day3/: part1.py  part2.py  test_day.py
solutions/2023/tab1tha/day6/: part1.py  part2.py  test_day.py
solutions/2024/kws/: README.md  day17.txt  pyproject.toml
solutions/2024/kws/aoc_2024_kws/: cli.py  config.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  setup.py
solutions/2024/kws/aoc_2024_kws/extras/: day_06.py  day_10.map  day_10_mapgen.py
solutions/2024/kws/inputs/kws/: day05.txt
solutions/2024/pughmds/python/: main.py  pyproject.toml
solutions/2024/pughmds/python/day01/: main.py
solutions/2024/pughmds/python/day02/: main.py
solutions/2024/pughmds/python/day03/: main.py
solutions/2024/pughmds/python/day04/: main.py
solutions/2024/pughmds/python/day05/: main.py
solutions/2024/pughmds/python/input_processing/: parse_file.py
solutions/2024/pughmds/python/sample_data/: day03.txt  day03_part02_test03.txt  day04_part01_test02.txt  day04_part02_test01.txt
solutions/2024/pughmds/python/tests/: test_day01.py  test_day02.py  test_day03.py  test_day05.py  test_day2.py  test_day4.py
solutions/Solutions by Celine/: day7.ipynb
(+365 files in other folders)
