[tool.poetry]
name = "aoc-2022-kws"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aoc_2022_kws"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"
usersettings = "^1.1.5"
click = "^8.1.3"
rich = "^12.6.0"
advent-of-code-data = "^1.3.2"

[tool.poetry.scripts]
aoc22 = "aoc_2022_kws.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
