[tool.poetry]
name = "francisco-2023"
version = "0.1.0"
description = ""
authors = ["Francisco Macedo <franciscovcbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
typer = "^0.7.0"
requests = "^2.28.1"
python-decouple = "^3.6"
markdownify = "^0.11.6"
tqdm = "^4.64.1"
rich = "^13.7.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
