[tool.poetry]
name = "day06"
version = "0.1.0"
description = ""
authors = ["Matthew Pugh <pughmds@cyram.org>"]

[tool.poetry.dependencies]
python = "^3.9.5"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
